--- a/protected-route1/src/Components/Register/Register.css
+++ b/protected-route1/src/Components/Register/Register.css
@@ -1,8 +1,8 @@
 .form__part {
       width: 500px;
-      height: 700px;
+      height: 600px;
       background: #FFFFFF;
-      border: 1px solid #95A0A7;
+      border: 1px solid goldenrod;
       border-radius: 8px;
       margin: 20px auto;
       padding: 20px;
@@ -26,8 +26,7 @@ form input {
       height: 50px;
       border: 1px solid #95A0A7;
       border-radius: 5px;
-      font-size: 20px;
-      font-weight: 500;
+      font-size: 15px;
 }
 
 .signup__btn {
@@ -41,7 +40,12 @@ form input {
       color: #0E161A;
       border: 0;
       margin-top: 20px;
+      transition: all linear 0.2s;
 
+}
+
+.signup__btn:hover {
+      background: goldenrod;
 }
 
 .transfer__login span {
