login using github account

--- a/protected-route1/src/Components/Login/Login.css
+++ b/protected-route1/src/Components/Login/Login.css
@@ -1,6 +1,6 @@
 .login__part {
       width: 500px;
-      height: 500px;
+      /* height: 550px; */
       background: #FFFFFF;
       border: 1px solid goldenrod;
       border-radius: 8px;
